--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,29 @@
+body{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 8fr;
+}
+
 header{
+    grid-column: 2/3;
+    grid-row: 1/2;
     text-align: center;
 }
+.sidebar {
+    grid-column: 0/1;
+    grid-row: 1/3;
+}
+.log {
+    justify-self: start;
+    && form{
+        display: flex;
+        flex-direction: column;
+        font-size: 1.2rem;
+    }
+}
 .message-board {
+    grid-column: 2/3;
+    grid-row: 2/3;
     display: flex;
     flex-direction: column;
     justify-content: start;
