--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,25 @@
     <h1>Welcome to the member board</h1>
     <h2>Member messages will be displayed here!</h2>
     </header>
+    <div class="sidebar">
+        <div class="log">
+            <% if (locals.user) { %>
+                <h1>Welcome Back <br><%= user.name %> <%=user.surname %>!</h1>
+                <a href="/log-out">Log Out</a>
+            <%  } else {  %>
+                <h1>Log in!</h1>
+                <form action="/log-in" method="POST">
+                    <label for="email">Email</label>
+                    <input type="text" name="email" id="email" placeholder="email" />
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" />
+                    <button>Log In</button>
+                </form>
+                <a href="/sign-up">Create an account</a>
+            <%  }  %>
+        </div>
+        
+    </div>
     <main>
         <%- include("partials/success.ejs") %>
         <div class="message-board">
@@ -21,23 +40,6 @@
                 <%})}else{%>
                     <h2>Seems like this is empty...</h2>
                 <%}%>
-        </div>
-        <div class="sign-up">
-            <h1>Sign up to write a message. And see who is behind them</h1>
-            <%- include("partials/errors.ejs")%>
-            <form action="/sign-up" method="POST">
-                <label for="firstName">First Name:</label>
-                <input type="text" name="firstName" id="firstName" required>
-                <label for="lastName">Last Name:</label>
-                <input type="text" name="lastName" id="lastName" required>
-                <label for="email">E-Mail:</label>
-                <input type="email" name="email" id="email" required>
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password">
-                <label for="confirm-password">Confirm password:</label>
-                <input type="password" name="confirm-password" id="confirm-password">
-                <button type="submit">Submit</button>
-            </form>
         </div>
     </main>
 </body>
