--- a/public/index.css
+++ b/public/index.css
@@ -9,6 +9,9 @@ header{
     grid-row: 1/2;
     text-align: center;
 }
+header h1 :hover{
+    background-color: black;
+}
 .sidebar {
     grid-column: 0/1;
     grid-row: 1/3;
@@ -48,4 +51,24 @@ header{
         width: 350px;
         height: 35px;
     }
+}
+.new-message-button {
+    display: block;
+    padding: 20px;
+    height: 10px;
+    width: 200px;
+    border: 1px solid red;
+    border-radius: 12px;
+    background-color: darkgoldenrod;
+    font-size: 1.2rem;
+    text-decoration: none;
+    color: inherit;
+}
+.new-message-button:hover{
+    background-color: rgb(90, 67, 7);
+    color: white;
+}
+.new-message-form {
+    display: flex;
+    flex-direction: column;
 }
