--- a/public/index.css
+++ b/public/index.css
@@ -69,6 +69,55 @@ header h1 :hover{
     color: white;
 }
 .new-message-form {
+    width: 100vw;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: 1.5rem;
+    && input, button, form, textarea{
+        font-size: 1.5rem;
+        display: flex;
+        flex-direction: column;
+    }
+}
+#overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Dim effect */
+    visibility: hidden; /* Hide by default */
+    z-index: 999;
+}
+.join-club-div{
+    visibility: hidden;
+    position: absolute;
+    top: 0px;
+    transition:
+    transform 0.3s ease-in;
+}
+.join-club-div[pressed=true]{
+    visibility: visible;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    position: absolute;
+    left: 40%;
+    transform: translateY(50%);
+    width: 400px;
+    height: 400px;
+    border: 1px solid black;
+    border-radius: 12px;
+    background-color: rgb(224, 173, 46);
+    z-index: 1000;
+}
+.join-club-div[pressed=true] ~ #overlay {
+    visibility: visible;
+}
+.join-club-div input, .join-club-div button, .join-club-div label{
+    font-size: 1.5rem;
 }
