--- a/views/new-message-form.ejs
+++ b/views/new-message-form.ejs
@@ -5,10 +5,12 @@
     <div class="new-message-form">
         <form action="/new-message" method="POST">
             <label for="name">Name:</label>
-            <input type="text" id="name" value="<%=user.name %> <%=user.surname%>" name="name" disabled="true">
+            <input type="text" id="name" value="<%=user.name %> <%=user.surname%>" name="name" readonly>
             <label for="message">Message:</label>
             <textarea name="message" id="message" rows="20" cols="50"></textarea>
             <button>Submit message (secret for non-members)</button>
         </form>
     </div>
-<%}%>
+<%}else{%>
+    <h1>Log in to send a message!</h1>
+ <%}%>
