--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,19 +33,22 @@
     <main>
         <div class="message-board">
             <%if (locals.messages) { %>
-                <% messages.forEach(function(message){console.log(message.date) %>
+                <% messages.forEach(function(message){%>
                     <%if(locals.user && locals.user.membership===true){%>
                         <ul class="message-box">
                             <li>
                                 <h3 class="message-user">By: <%=message.by_user%> <%=parsedDate%></h3>
                                 <div class="message"><p><%=message.body%></p></div>
+                                <%if(user.is_admin === true){%>
+                                    <button class="delete-message"><a href="./delete-message">Delete message</a></button>
+                                <%}%>
                             </li>
                         </ul>    
                     <%}else{%>
                     <ul class="message-box">
                         <li>
                             <h3 class="message-user">by Anonymous</h3>
-                            <h5><%=parsedDate%></h5>
+                            <h5>Published some time ago</h5>
                             <div class="message"><p><%=message.body%></p></div>
                         </li>
                     </ul>
@@ -58,18 +61,18 @@
             <div class="links">
                 <a href="/new-message-form" class="new-message-button">Leave a new message :)</a>
                 <button class="join-button">Join the club</button>
-                <div id="overlay"></div>
                 <%if(locals.failedAttempt === true){%>
-                    <div class="join-club-div">
+                    <div class="join-club-div" pressed="true">
                         <form action="./secret-code" method="POST">
                             <label for="code">Insert the secret code</label>
                             <input type="text" name="code" id="code">
                             <input type="hidden" name="email" value="<%=user.email%>">
                             <button id="submitCode">Submit</button>
-                            <button id="close-club-form"><a href="/"></a>Go Back</button>
+                            <button id="close-club-form">Go Back</button>
                             <h4>Wrong code, try again.</h4>
                         </form>
                     </div>
+                    <div id="overlay"></div>
                 <%}%>
                 <div class="join-club-div">
                     <form action="./secret-code" method="POST">
@@ -80,12 +83,14 @@
                         <button id="close-club-form">Go Back</button>
                     </form>
                 </div>
+                <div id="overlay"></div>
             </div>
         <%}%>
     </main>
 </body>
 </html>
 <script>
+    const clubDivCointainer = document.querySelector(".links")
     const button = document.querySelector('.join-button');
     const joinClubDiv = document.querySelector('.join-club-div');
     const closeButton = document.getElementById("close-club-form");
@@ -93,7 +98,8 @@
             joinClubDiv.setAttribute('pressed', true);
             overlay.style.visibility = 'visible'; 
     })
-    closeButton.addEventListener('click', () => {
+    closeButton.addEventListener('click', (e) => {
+            e.preventDefault();
             joinClubDiv.removeAttribute('pressed');
             overlay.style.visibility = 'hidden'
     })
