--- a/public/index.css
+++ b/public/index.css
@@ -2,27 +2,56 @@ body{
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 8fr;
+    margin: 0;
+    padding: 0;
 }
 
 header{
     grid-column: 2/3;
     grid-row: 1/2;
     text-align: center;
+    background-image: linear-gradient(to left, #e66465, #9198e5);
+    color: rgb(251, 249, 249);
+    text-shadow: 1px 1px 1px black;
 }
 header h1 :hover{
     background-color: black;
 }
 .sidebar {
+    color: aliceblue;
     grid-column: 0/1;
     grid-row: 1/3;
+    background-image: linear-gradient(rgb(88, 88, 219), rgb(13, 13, 55));
 }
 .log {
-    justify-self: start;
+    justify-self: center;
     && form{
         display: flex;
         flex-direction: column;
         font-size: 1.2rem;
     }
+    && a{
+        text-decoration: none;
+        font-size: 1.2rem;
+        padding: 12px;
+        margin-top: 24px;
+        text-align: center;
+        display: block;
+        color: black;
+        width: 120px;
+        min-height: 24px;
+        border-radius: 8px;
+        background-color: rgb(255, 255, 255);
+    }
+    && a:hover{
+        background-color: rgb(219, 235, 249);
+    }
+}
+main{
+    background-image: linear-gradient(orange, teal);
+    color: rgb(251, 249, 249);
+    text-shadow: 0.5px 0.5px 1px black;
+
 }
 .message-board {
     grid-column: 2/3;
@@ -31,12 +60,25 @@ header h1 :hover{
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    border: 1px solid red;
+    border: 1px solid rgba(0, 0, 0, 0.34);
+    background-image: linear-gradient(0.25turn, rgb(255, 251, 251), rgb(204, 200, 200), rgb(255, 251, 251) );
+    color: black;
+    text-shadow: none;
     height: 700px;
-    overflow: scroll;
+    overflow: auto;
     max-width: 80%;
     margin-left: 10%;
     margin-right: 10%;
+}
+.message-box{
+    width: 600px;
+}
+.message{
+    width: 600px;
+    min-height: 200px;
+    border-radius: 12px;
+    border: 1px solid gray;
+    padding-left: 12px;
 }
 .sign-up {
     text-align: center;
