--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,10 @@
                                 <h3 class="message-user">By: <%=message.by_user%> <%=parsedDate%></h3>
                                 <div class="message"><p><%=message.body%></p></div>
                                 <%if(user.is_admin === true){%>
-                                    <button class="delete-message"><a href="./delete-message">Delete message</a></button>
+                                    <form action="./delete-message" method="POST">
+                                        <input type="hidden" value="<%=message.id%>" name="message" id="message">
+                                        <button class="delete-message">Delete</button>
+                                    </form>
                                 <%}%>
                             </li>
                         </ul>    
