--- a/views/new-message-form.ejs
+++ b/views/new-message-form.ejs
@@ -1,16 +1,34 @@
 <head>
     <link rel="stylesheet" href="/index.css">
 </head>
-<%if (locals.user){ %> 
-    <div class="new-message-form">
-        <form action="/new-message" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" value="<%=user.name %> <%=user.surname%>" name="name" readonly>
-            <label for="message">Message:</label>
-            <textarea name="message" id="message" rows="20" cols="50"></textarea>
-            <button>Submit message (secret for non-members)</button>
-        </form>
-    </div>
-<%}else{%>
-    <h1>Log in to send a message!</h1>
- <%}%>
+<div class="new-message-form">
+    <%if (locals.user){ %> 
+            <ul id="errors">
+            </ul>
+            <form action="/new-message" method="POST">
+                <label for="name">Name:</label>
+                <input type="text" id="name" value="<%=user.name %> <%=user.surname%>" name="name" readonly>
+                <label for="message">Message:</label>
+                <textarea name="message" id="message" rows="20" cols="50"></textarea>
+                <button id="submitMessage">Submit message (secret for non-members)</button>
+                <a href="/">Go back</a>
+            </form>
+        </div>
+    <%}else{%>
+        <h1>Log in to send a message!</h1>
+    <%}%>
+</div>
+<script>
+    const errorsDiv = document.getElementById('errors');
+    const submitButton = document.getElementById('submitMessage');
+    const message = document.getElementById('message');
+    console.log(errorsDiv, submitButton, message)
+    submitButton.addEventListener('click', (e) => {
+        if(message.value.length < 1){
+            e.preventDefault();
+            const newError = document.createElement('li');
+            newError.textContent = 'Say something'
+            errorsDiv.appendChild(newError);
+        }
+    })
+</script>
