--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,7 @@
 body{
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 8fr;
+    grid-template-rows: 1fr 10fr;
     margin: 0;
     padding: 0;
 }
@@ -14,17 +14,21 @@ header{
     color: rgb(251, 249, 249);
     text-shadow: 1px 1px 1px black;
 }
-header h1 :hover{
-    background-color: black;
+header h1, header h2{
+    margin: 0;
 }
 .sidebar {
     color: aliceblue;
-    grid-column: 0/1;
+    grid-column: 1/2;
     grid-row: 1/3;
     background-image: linear-gradient(rgb(88, 88, 219), rgb(13, 13, 55));
 }
 .log {
-    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
     && form{
         display: flex;
         flex-direction: column;
@@ -34,7 +38,6 @@ header h1 :hover{
         text-decoration: none;
         font-size: 1.2rem;
         padding: 12px;
-        margin-top: 24px;
         text-align: center;
         display: block;
         color: black;
@@ -46,16 +49,55 @@ header h1 :hover{
     && a:hover{
         background-color: rgb(219, 235, 249);
     }
+    && .links {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 24px;
+    }
+    && .new-message-button {
+        display: block;
+        padding: 20px;
+        height: 10px;
+        width: 200px;
+        border-radius: 12px;
+        background-color: darkgoldenrod;
+        font-size: 1.2rem;
+        text-decoration: none;
+        color: inherit;
+    }
+    && .new-message-button:hover{
+        background-color: rgb(90, 67, 7);
+        color: white;
+    }
+    && .links button {
+        padding: 20px;
+        padding-bottom: 38px;
+        height: 10px;
+        width: 200px;
+        border-radius: 12px;
+        background-color: rgb(98, 146, 50);
+        font-size: 1.2rem;
+        color: white;
+    }
+    && .links button:hover{
+        cursor: pointer;
+        background-color: #39692a;
+    }
+
 }
 main{
+    grid-column: 2/3;
+    grid-row: 2/3;
     background-image: linear-gradient(orange, teal);
     color: rgb(251, 249, 249);
     text-shadow: 0.5px 0.5px 1px black;
 
 }
 .message-board {
-    grid-column: 2/3;
-    grid-row: 2/3;
+    margin-top: 35px;
+    margin-bottom: 38px;
+    padding: 12px;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -64,11 +106,12 @@ main{
     background-image: linear-gradient(0.25turn, rgb(255, 251, 251), rgb(204, 200, 200), rgb(255, 251, 251) );
     color: black;
     text-shadow: none;
-    height: 700px;
+    max-height: 600px ;
     overflow: auto;
     max-width: 80%;
     margin-left: 10%;
     margin-right: 10%;
+    border-radius: 12px;
 }
 .message-box{
     width: 600px;
@@ -94,27 +137,13 @@ main{
         height: 35px;
     }
 }
-.new-message-button {
-    display: block;
-    padding: 20px;
-    height: 10px;
-    width: 200px;
-    border: 1px solid red;
-    border-radius: 12px;
-    background-color: darkgoldenrod;
-    font-size: 1.2rem;
-    text-decoration: none;
-    color: inherit;
-}
-.new-message-button:hover{
-    background-color: rgb(90, 67, 7);
-    color: white;
-}
+
 .new-message-form {
     width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-wrap: wrap;
     font-size: 1.5rem;
@@ -122,14 +151,28 @@ main{
         font-size: 1.5rem;
         display: flex;
         flex-direction: column;
+    };
+    background-image: linear-gradient(rgb(88, 88, 219), rgb(13, 13, 55));
+    color: #ffffff;
+
+}
+.new-message-form a {
+    color: white;
+    text-decoration: none;
+    background-color: #9198e5;
+    border-radius: 8px;
+    padding: 6px;
+    &&:hover{
+        background-color: #565a88;
     }
 }
+/*added a layer to dim the page as to provide a sense of pop up to the secret code form*/
 #overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 150%;
     background-color: rgba(0, 0, 0, 0.5); /* Dim effect */
     visibility: hidden; /* Hide by default */
     z-index: 999;
@@ -162,4 +205,26 @@ main{
 }
 .join-club-div input, .join-club-div button, .join-club-div label{
     font-size: 1.5rem;
+}
+@media screen and (max-width : 700px) {
+    body{
+        display: flex;
+        flex-direction: column;
+    }
+    .header{
+        max-width: 500px;
+    }
+    .message-box{
+        max-width: 250px;
+        margin: 10px;
+        && .message{
+            max-width: 80%;
+            font-size: 0.8rem;
+        }
+    }
+    .join-club-div[pressed = true]{
+        max-width: 400px;
+        left: 0%;
+    }
+
 }
